# hamego

./: AGENTS.md  Cargo.toml  README.md  go.mod  go.sum
.claude/plans/: wasm-svg-rendering.md
cmd/hamego/: main.go
hamego-core/: Cargo.toml
hamego-core/src/: lib.rs
hamego-wasm/: Cargo.toml
hamego-wasm/src/: lib.rs
hamego-wasm/www/: index.html
pkg/hameg/: channel.go  constants.go  hameg.go  hameg_test.go  timebase.go  waveform.go
samples/: session1.hpgl  test.hpgl  test2.hpgl  test3.hpgl  test4.hpgl  test5.hpgl
src/: connection.rs  lib.rs  main.rs
tests/: test5_integration.rs
